--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
         "catalyst": "bin/catalyst.js"
     },
     "_moduleAliases": {
-        "@template": ".",
-        "@template/src": "src",
-        "@template/routes": "src/js/routes",
-        "@template/server": "server",
-        "@template/store": "src/js/store",
-        "@template/config": "config",
+        "@catalyst/template": ".",
+        "@catalyst/template/src": "src",
+        "@catalyst/template/routes": "src/js/routes",
+        "@catalyst/template/server": "server",
+        "@catalyst/template/store": "src/js/store",
+        "@catalyst/template/config": "config",
         "@catalyst": ".",
         "@catalyst/root": "../",
         "@catalyst/router": "router",
