--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,13 @@
 {
     "presets": [
         [
+            "@babel/preset-typescript",
+            {
+                "isTSX": true,
+                "allExtensions": true
+            }
+        ],
+        [
             "@babel/preset-env",
             {
                 "targets": {
