--- a/babel.config.json
+++ b/babel.config.json
@@ -15,7 +15,7 @@
                 }
             }
         ],
-        "@babel/preset-react"
+        ["@babel/preset-react", { "runtime": "automatic" }]
     ],
     "compact": true,
     "plugins": ["@loadable/babel-plugin"],
