--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "module-alias": "^2.2.3",
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
+        "postcss-scss": "^4.0.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
