Revert "Merge branch 'canary' of github.com:tata1mg/catalyst into suspense_changes"
This reverts commit b93a4d5285415c38172f57cc976c019c6e15759a, reversing
changes made to 308dd34aef6bd38f992ce2aeb30f0918f2c01205.

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,13 +1,6 @@
 {
     "presets": [
         [
-            "@babel/preset-typescript",
-            {
-                "isTSX": true,
-                "allExtensions": true
-            }
-        ],
-        [
             "@babel/preset-env",
             {
                 "targets": {
@@ -15,7 +8,7 @@
                 }
             }
         ],
-        ["@babel/preset-react", { "runtime": "automatic" }]
+        "@babel/preset-react"
     ],
     "compact": true,
     "env": {
