--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catalyst-core",
-    "version": "0.0.1-canary.0",
+    "version": "0.0.1-beta.6",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
@@ -40,7 +40,6 @@
         "@babel/node": "^7.22.19",
         "@babel/preset-env": "^7.23.2",
         "@babel/preset-react": "^7.22.15",
-        "@babel/preset-typescript": "^7.24.7",
         "@babel/register": "^7.22.15",
         "@dr.pogodin/css-modules-require-hook": "^4.7.3",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
