--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catalyst-core",
-    "version": "0.0.1-beta.6",
+    "version": "0.0.2-canary.0",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
