--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
         "@babel/preset-react": "^7.22.15",
         "@babel/register": "^7.22.15",
         "@dr.pogodin/css-modules-require-hook": "^4.7.3",
-        "@loadable/babel-plugin": "5.13.2",
-        "@loadable/component": "5.15.2",
-        "@loadable/server": "5.15.2",
-        "@loadable/webpack-plugin": "5.15.2",
+        "@loadable/babel-plugin": "^5.16.1",
+        "@loadable/component": "^5.16.3",
+        "@loadable/server": "^5.16.1",
+        "@loadable/webpack-plugin": "^5.15.2",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router": "0.0.1-beta.3",
+        "@tata1mg/router": "0.0.1-beta.2",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
