feat: add rsc demo app

--- a/package.json
+++ b/package.json
@@ -1,112 +1,27 @@
 {
-    "name": "catalyst-core",
-    "version": "0.0.1-beta.7",
-    "main": "index.js",
-    "description": "Web framework that provides great performance out of the box",
-    "bin": {
-        "catalyst": "bin/catalyst.js"
-    },
-    "_moduleAliases": {
-        "@catalyst/template": ".",
-        "@catalyst/template/src": "src",
-        "@catalyst/template/routes": "src/js/routes",
-        "@catalyst/template/server": "server",
-        "@catalyst/template/store": "src/js/store",
-        "@catalyst/template/config": "config",
-        "@catalyst": ".",
-        "@catalyst/root": "../",
-        "@catalyst/router": "router",
-        "@catalyst/scripts": "scripts",
-        "@catalyst/server": "server",
-        "@catalyst/webpack": "webpack"
-    },
-    "exports": {
-        ".": "./dist/index.js",
-        "./logger": "./dist/logger.js",
-        "./caching": "./dist/caching.js",
-        "./router/ClientRouter": "./dist/router/ClientRouter.js"
-    },
-    "scripts": {
-        "lint": "eslint .",
-        "lint-staged": "lint-staged",
-        "prettify": "prettier . --write",
-        "prepare": "babel src --out-dir ./dist",
-        "prepublishOnly": "npm i && npm run prepare"
-    },
-    "license": "MIT",
-    "dependencies": {
-        "@babel/cli": "^7.23.0",
-        "@babel/core": "^7.23.2",
-        "@babel/node": "^7.22.19",
-        "@babel/preset-env": "^7.23.2",
-        "@babel/preset-react": "^7.22.15",
-        "@babel/register": "^7.22.15",
-        "@dr.pogodin/css-modules-require-hook": "^4.7.3",
-        "@loadable/babel-plugin": "^5.16.1",
-        "@loadable/component": "^5.15.3",
-        "@loadable/server": "^5.16.1",
-        "@loadable/webpack-plugin": "^5.15.2",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-        "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router": "0.0.1-beta.4",
-        "app-root-path": "^3.1.0",
-        "babel-loader": "^9.1.3",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-        "body-parser": "^1.20.2",
-        "chokidar": "^3.6.0",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.6",
-        "css-hot-loader": "^1.4.4",
-        "css-loader": "^6.8.1",
-        "express": "^4.18.2",
-        "express-static-gzip": "^2.1.7",
-        "file-loader": "^6.2.0",
-        "html-loader": "^4.2.0",
-        "img-loader": "^4.0.0",
-        "mini-css-extract-plugin": "^2.7.6",
-        "module-alias": "^2.2.3",
-        "picocolors": "^1.0.0",
-        "postcss-loader": "^7.3.3",
-        "postcss-scss": "^4.0.9",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.1.3",
-        "react-refresh": "^0.14.0",
-        "react-router-dom": "^6.16.0",
-        "redux": "^4.2.1",
-        "sass": "^1.69.5",
-        "sass-loader": "^13.3.2",
-        "sass-resources-loader": "^2.2.5",
-        "ua-parser-js": "^1.0.37",
-        "url": "^0.11.3",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.88.2",
-        "webpack-bundle-analyzer": "^4.9.1",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.2",
-        "webpack-merge": "^5.9.0",
-        "webpack-node-externals": "^3.0.0",
-        "winston": "^3.11.0",
-        "winston-daily-rotate-file": "^5.0.0"
-    },
-    "devDependencies": {
-        "@babel/eslint-parser": "^7.19.1",
-        "@commitlint/cli": "^19.3.0",
-        "@commitlint/config-conventional": "^19.2.2",
-        "eslint": "^8.26.0",
-        "eslint-plugin-babel": "^5.3.1",
-        "eslint-plugin-react": "^7.34.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-risxss": "^2.1.0",
-        "eslint-plugin-security": "^3.0.0",
-        "husky": "^9.0.11",
-        "lint-staged": "^15.2.2",
-        "prettier": "^3.2.5"
-    },
-    "lint-staged": {
-        "*.{js,jsx}": [
-            "eslint .",
-            "prettier . --write"
-        ]
-    }
+  "name": "rsc",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "NODE_ENV=production node build.js",
+    "serve": "NODE_ENV=production node build/server/server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@swc/core": "^1.7.26",
+    "@vitejs/plugin-react": "^4.3.2",
+    "esbuild-register": "^3.6.0",
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "react": "0.0.0-experimental-06d0b89e-20240801",
+    "react-dom": "0.0.0-experimental-06d0b89e-20240801",
+    "react-server-dom-webpack": "0.0.0-experimental-06d0b89e-20240801",
+    "rollup-plugin-node-externals": "^7.1.3",
+    "vite": "^5.4.8",
+    "vite-plugin-node-polyfills": "^0.22.0"
+  }
 }
