--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-/node_modules
-/webpack
-/router
-/scripts
-/server
-/types
-/dist
-
-caching.js
-router.js
-logger.js
-
-/logs
-/loadable-stats.json
-/index.js
-
+build
+node_modules
