--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@swc/core": "^1.7.26",
+    "@tata1mg/router": "^0.0.1-beta.4",
     "@vitejs/plugin-react": "^4.3.2",
     "esbuild-register": "^3.6.0",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "react": "0.0.0-experimental-06d0b89e-20240801",
     "react-dom": "0.0.0-experimental-06d0b89e-20240801",
+    "react-router-dom": "^6.28.0",
     "react-server-dom-webpack": "0.0.0-experimental-06d0b89e-20240801",
     "rollup-plugin-node-externals": "^7.1.3",
     "vite": "^5.4.8",
