--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "catalyst-core",
-    "version": "0.0.1-beta.7",
+    "name": "catalyst-core-internal",
+    "version": "0.0.1-beta.42",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
@@ -68,8 +68,8 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "18.3.0",
+        "react-dom": "18.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
