--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "catalyst-core-internal",
-    "version": "0.0.1-beta.42",
+    "name": "catalyst-core",
+    "version": "0.0.1-beta.7",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
@@ -48,7 +48,7 @@
         "@loadable/webpack-plugin": "^5.15.2",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router": "0.0.1-beta.4",
+        "@tata1mg/router": "0.0.1-beta.5",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -68,8 +68,8 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "18.3.0",
-        "react-dom": "18.3.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
