--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
     "name": "catalyst-core",
-    "version": "0.0.1-beta.7",
+    "version": "0.0.1-beta.8",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
         "catalyst": "bin/catalyst.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tata1mg/catalyst-core.git"
     },
     "_moduleAliases": {
         "@catalyst/template": ".",
