--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "@tata1mg/router": "0.0.1-beta.6",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
         "body-parser": "^1.20.2",
         "chokidar": "^3.6.0",
         "compression": "^1.7.4",
@@ -72,8 +71,8 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
