--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "chokidar": "^3.6.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
+        "cross-env": "^7.0.3",
         "css-hot-loader": "^1.4.4",
         "css-loader": "^6.8.1",
         "express": "^4.18.2",
