--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
         "react": "^18.2.0",
+        "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
@@ -97,9 +98,11 @@
         "@babel/eslint-parser": "^7.19.1",
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
+        "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
         "eslint": "^8.26.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-react": "^7.34.1",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-risxss": "^2.1.0",
         "eslint-plugin-security": "^3.0.0",
