--- a/package.json
+++ b/package.json
@@ -112,5 +112,8 @@
             "eslint .",
             "prettier . --write"
         ]
+    },
+    "engines": {
+        "node": ">= 22.14.0"
     }
 }
