--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ logger.js
 /loadable-stats.json
 /index.js
 
+build/
 **/iosnativeWebView/build/
 **/iosnativeWebView/tmp/
 .env
@@ -88,3 +89,4 @@ logger.js
 *.aab
 **/androidProject/**/webview_config.properties
 **/androidProject/**/cpp/*
+**/androidProject/**/build/*
