--- a/package.json
+++ b/package.json
@@ -73,10 +73,9 @@
         "postcss-scss": "^4.0.9",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "react-redux": "^8.1.3",
+        "react-redux": "^9.2.0",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
-        "redux": "^4.2.1",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
         "sass-resources-loader": "^2.2.5",
@@ -105,6 +104,14 @@
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5"
+    },
+    "overrides": {
+        "@loadable/component": {
+            "react": "^16.3.0 || ^17.0.0 || ^18.0.0 || 19.0.0"
+        },
+        "@loadable/server": {
+            "react": "^16.3.0 || ^17.0.0 || ^18.0.0 || 19.0.0"
+        }
     },
     "lint-staged": {
         "*.{js,jsx}": [
