--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "@loadable/webpack-plugin": "^5.15.2",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router-internal": "0.0.1-beta.6",
+        "@tata1mg/router": "bitbucket:tata1mg/1mg-web-router#react-19-upgrade",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "body-parser": "^1.20.2",
