--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "lint": "eslint .",
         "lint-staged": "lint-staged",
         "prettify": "prettier . --write",
-        "prepare": "babel src --out-dir ./dist",
+        "prepare": "babel src --out-dir ./dist ",
         "prepublishOnly": "npm i && npm run prepare"
     },
     "license": "MIT",
@@ -92,6 +92,7 @@
         "@babel/eslint-parser": "^7.19.1",
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
+        "@vitejs/plugin-react": "^4.4.1",
         "eslint": "^8.26.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-react": "^7.34.1",
@@ -100,7 +101,10 @@
         "eslint-plugin-security": "^3.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
-        "prettier": "^3.2.5"
+        "prettier": "^3.2.5",
+        "rollup-plugin-visualizer": "^5.14.0",
+        "vite": "^6.3.2",
+        "vite-plugin-svgr": "^4.3.0"
     },
     "lint-staged": {
         "*.{js,jsx}": [
