--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,25 +1,63 @@
 name: CI Pipeline
 
 on:
+    push:
+        branches:
+            - master
     pull_request:
-        branches: ["main"]
+        branches:
+            - master
 
 jobs:
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "20"
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Run lint
+              run: npm run lint
+
     build:
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [20.4.0]
-
+        needs: lint
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v4
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
               with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: "npm"
+                  node-version: "20"
 
-            - name: Build and Test
-              run: chmod +x ./test-template.sh && ./test-template.sh
+            - name: Install dependencies
+              run: npm install
+
+            - name: Run build
+              run: npm run build
+
+    test:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "20"
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Run tests
+              run: npm test
