--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "scripts": {
         "lint": "eslint .",
+        "test": "./test.sh",
         "lint-staged": "lint-staged",
         "prettify": "prettier . --write",
         "prepare": "babel src --out-dir ./dist",
