--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,63 +1,25 @@
 name: CI Pipeline
 
 on:
-    push:
-        branches:
-            - master
     pull_request:
-        branches:
-            - master
+        branches: ["main"]
 
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v2
-              with:
-                  node-version: "20"
-
-            - name: Install dependencies
-              run: npm install
-
-            - name: Run lint
-              run: npm run lint
-
     build:
         runs-on: ubuntu-latest
-        needs: lint
+
+        strategy:
+            matrix:
+                node-version: [20.4.0]
+
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
+            - uses: actions/checkout@v4
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v4
               with:
-                  node-version: "20"
+                  node-version: ${{ matrix.node-version }}
+                  cache: "npm"
 
-            - name: Install dependencies
-              run: npm install
-
-            - name: Run build
-              run: npm run build
-
-    test:
-        runs-on: ubuntu-latest
-        needs: build
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v2
-              with:
-                  node-version: "20"
-
-            - name: Install dependencies
-              run: npm install
-
-            - name: Run tests
-              run: npm test
+            - name: Build and Test
+              run: chmod +x ./test-template.sh && ./test-template.sh
