--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "./logger": "./dist/logger.js",
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
-        "./document": "./dist/server/renderer/document/index.js"
+        "./document": "./dist/server/renderer/document/index.js",
+        ".": "./dist/index.jsx"
     },
     "scripts": {
         "lint": "eslint .",
@@ -69,10 +70,12 @@
         "postcss-loader": "^7.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
         "redux": "^4.2.1",
+        "sanitize-html": "^2.13.1",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
         "sass-resources-loader": "^2.2.5",
