--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
         "@tata1mg/router": "^0.0.1-beta.2",
+        "@vitejs/plugin-react": "^4.4.1",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -82,6 +83,7 @@
         "ua-parser-js": "^1.0.37",
         "url": "^0.11.3",
         "url-loader": "^4.1.1",
+        "vite": "^6.3.5",
         "webpack": "^5.88.2",
         "webpack-bundle-analyzer": "^4.9.1",
         "webpack-cli": "^5.1.4",
@@ -95,7 +97,6 @@
         "@babel/eslint-parser": "^7.19.1",
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
-        "@vitejs/plugin-react": "^4.4.1",
         "eslint": "^8.26.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-react": "^7.34.1",
@@ -105,9 +106,7 @@
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
-        "rollup-plugin-visualizer": "^5.14.0",
-        "vite": "^6.3.5",
-        "vite-plugin-svgr": "^4.3.0"
+        "rollup-plugin-visualizer": "^5.14.0"
     },
     "lint-staged": {
         "*.{js,jsx}": [
