--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
         "./document": "./dist/server/renderer/document/index.js",
-        ".": "./dist/index.jsx"
+        ".": "./dist/index.js"
     },
     "scripts": {
         "lint": "eslint .",
