Revert "add barrel file for router exports. To be optimised later"
This reverts commit b1c5b7c2faf0bd72fa10c948aab05bb4826c1a30.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
         "./document": "./dist/server/renderer/document/index.js",
-        ".": "./dist/index.js"
+        ".": "./dist/index.jsx"
     },
     "scripts": {
         "lint": "eslint .",
