--- a/template/package.json
+++ b/template/package.json
@@ -16,12 +16,12 @@
         "@server": "server",
         "@config": "config",
         "@css": "src/static/css",
-        "@routes": "src/js/routes/",
-        "catalyst-core": "../dist"
+        "@routes": "src/js/routes/"
     },
     "dependencies": {
         "@loadable/component": "^5.16.3",
-        "@tata1mg/router": "^0.0.1-beta.7"
+        "@tata1mg/router": "^0.0.1-beta.7",
+        "catalyst-core": "0.0.1-beta.13"
     },
     "devDependencies": {
         "@playwright/test": "^1.52.0",
