--- a/package.json
+++ b/package.json
@@ -7,18 +7,7 @@
         "catalyst": "bin/catalyst.js"
     },
     "_moduleAliases": {
-        "@catalyst/template": ".",
-        "@catalyst/template/src": "src",
-        "@catalyst/template/routes": "src/js/routes",
-        "@catalyst/template/server": "server",
-        "@catalyst/template/store": "src/js/store",
-        "@catalyst/template/config": "config",
-        "@catalyst": ".",
-        "@catalyst/root": "../",
-        "@catalyst/router": "router",
-        "@catalyst/scripts": "scripts",
-        "@catalyst/server": "server",
-        "@catalyst/webpack": "webpack"
+        "@catalyst/template": "."
     },
     "exports": {
         "./logger": "./dist/logger.js",
