--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,10 @@ on:
         required: false
         default: false
         type: boolean
+  pull_request:
+    branches: [ main ]
+    paths: [ '.github/workflows/publish.yml' ]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   show-versions:
@@ -91,15 +95,15 @@ jobs:
           echo ""
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo "⚡ Selected Configuration:"
-          echo "   🌿 Branch: ${{ github.event.inputs.branch }}"
-          echo "   📦 Package Type: ${{ github.event.inputs.package_type }}"
-          echo "   📊 Version Type: ${{ github.event.inputs.version_type }}"
+          echo "   🌿 Branch: ${{ github.event.inputs.branch || github.head_ref }}"
+          echo "   📦 Package Type: ${{ github.event.inputs.package_type || 'main' }}"
+          echo "   📊 Version Type: ${{ github.event.inputs.version_type || 'canary' }}"
           if [ -n "${{ github.event.inputs.custom_version }}" ]; then
             echo "   🎯 Custom Version: ${{ github.event.inputs.custom_version }}"
           else
             echo "   🤖 Auto-increment: Enabled"
           fi
-          echo "   🧪 Dry Run: ${{ github.event.inputs.dry_run }}"
+          echo "   🧪 Dry Run: ${{ github.event.inputs.dry_run || 'true (PR test mode)' }}"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
 
   publish:
@@ -110,7 +114,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.branch || github.head_ref }}
           fetch-depth: 0
         
       - name: Setup Node.js
@@ -126,8 +130,8 @@ jobs:
         id: next_version
         run: |
           # Determine which package and version type we're working with
-          PACKAGE_TYPE="${{ github.event.inputs.package_type }}"
-          VERSION_TYPE="${{ github.event.inputs.version_type }}"
+          PACKAGE_TYPE="${{ github.event.inputs.package_type || 'main' }}"
+          VERSION_TYPE="${{ github.event.inputs.version_type || 'canary' }}"
           CUSTOM_VERSION="${{ github.event.inputs.custom_version }}"
           
           if [ "$PACKAGE_TYPE" = "main" ]; then
@@ -187,17 +191,20 @@ jobs:
           echo ""
           echo "🚀 PUBLISH EXECUTION PLAN"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          echo "🌿 Branch:          ${{ github.event.inputs.branch }}"
+          echo "🌿 Branch:          ${{ github.event.inputs.branch || github.head_ref }}"
           echo "📦 Package Name:    ${{ steps.next_version.outputs.package_name }}"
           echo "📊 Current Version: ${{ steps.next_version.outputs.current_version }}"
           echo "🆕 Next Version:    ${{ steps.next_version.outputs.next_version }}"
-          echo "🔧 Version Type:    ${{ github.event.inputs.version_type }}"
+          echo "🔧 Version Type:    ${{ github.event.inputs.version_type || 'canary' }}"
           if [ -n "${{ github.event.inputs.custom_version }}" ]; then
             echo "🎯 Version Source:  Custom (manually specified)"
           else
             echo "🤖 Version Source:  Auto-increment"
           fi
-          echo "🧪 Dry Run:         ${{ github.event.inputs.dry_run }}"
+          echo "🧪 Dry Run:         ${{ github.event.inputs.dry_run || 'true (PR test mode)' }}"
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "🔬 Test Mode:       PR Testing - No actual publishing"
+          fi
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo ""
           
@@ -218,7 +225,7 @@ jobs:
           fi
           
       - name: Create backup and prepare for changes
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         run: |
           echo "💾 Creating backups..."
           # Backup all files that will be modified
@@ -235,7 +242,7 @@ jobs:
           echo "✅ Backups created successfully"
           
       - name: Update package configuration
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         run: |
           echo "🔧 Updating package.json..."
           
@@ -255,11 +262,11 @@ jobs:
           "
           
       - name: Handle comprehensive route changes
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         run: |
           echo "🔄 Handling comprehensive route changes..."
           
-          PACKAGE_TYPE="${{ github.event.inputs.package_type }}"
+          PACKAGE_TYPE="${{ github.event.inputs.package_type || 'main' }}"
           
           if [ "$PACKAGE_TYPE" = "internal" ]; then
             echo "📝 Updating ALL catalyst-core references to catalyst-core-internal..."
@@ -296,7 +303,7 @@ jobs:
             
             # Update template package.json files
             find template -name "package.json" -exec sed -i 's/"catalyst-core":/"catalyst-core-internal":/g' {} + 2>/dev/null || true
-            find template -name "package-lock.json" -exec sed -i 's/"catalyst-core"/"catalyst-core-internal"/g' {} + 2>/dev/null || true
+            find template -name "package-lock.json" -exec sed -i 's/"catalyst-core-internal"/"catalyst-core"/g' {} + 2>/dev/null || true
             
             # Update any remaining JSON files that might contain catalyst-core references
             find . -name "*.json" \
@@ -364,17 +371,42 @@ jobs:
               echo "... and $((TOTAL_FILES - 10)) more files"
             fi
           fi
+
+      # TEST MODE - Simulate the above changes for PR testing
+      - name: TEST MODE - Simulate package changes
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "🧪 TEST MODE - Simulating package configuration changes..."
+          echo "📝 Would update package.json:"
+          echo "   Name: ${{ steps.next_version.outputs.package_name }}"
+          echo "   Version: ${{ steps.next_version.outputs.next_version }}"
+          echo ""
+          echo "🔄 Would handle comprehensive route changes for package type: ${{ github.event.inputs.package_type || 'main' }}"
+          if [ "${{ github.event.inputs.package_type || 'main' }}" = "internal" ]; then
+            echo "   📝 Would update ALL catalyst-core references to catalyst-core-internal"
+          else
+            echo "   📝 Would ensure ALL references use catalyst-core"
+          fi
+          echo "✅ Package change simulation completed"
           
       - name: Build package
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         run: |
           echo "🔨 Building package..."
           npm run prepare
           echo "✅ Package built successfully"
+
+      # TEST MODE - Simulate build for PR testing  
+      - name: TEST MODE - Simulate build
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "🧪 TEST MODE - Simulating package build..."
+          echo "🔨 Would run: npm run prepare"
+          echo "✅ Build simulation completed"
           
       # COMMENTED OUT FOR TESTING - REMOVE COMMENTS WHEN READY TO PUBLISH
       # - name: Publish to npm
-      #   if: github.event.inputs.dry_run != 'true'
+      #   if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
       #   run: |
       #     echo "📤 Publishing to npm..."
       #     npm publish --access public
@@ -383,16 +415,26 @@ jobs:
       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       
       - name: TESTING - Simulate Publish
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         run: |
           echo "🧪 TESTING MODE - Simulating npm publish..."
           echo "📤 Would publish to npm with command: npm publish --access public"
           echo "📦 Package: ${{ steps.next_version.outputs.package_name }}"
           echo "🆕 Version: ${{ steps.next_version.outputs.next_version }}"
           echo "✅ Simulated publish completed successfully"
+
+      # TEST MODE - Show what would be published for PR testing
+      - name: TEST MODE - Show publish simulation
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "🧪 TEST MODE - Publishing simulation..."
+          echo "📤 Would publish to npm with command: npm publish --access public"
+          echo "📦 Package: ${{ steps.next_version.outputs.package_name }}"
+          echo "🆕 Version: ${{ steps.next_version.outputs.next_version }}"
+          echo "✅ Publish simulation completed"
           
       - name: Get current commit info
-        if: github.event.inputs.dry_run != 'true'
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
         id: commit_info
         run: |
           COMMIT_HASH=$(git rev-parse HEAD)
@@ -404,33 +446,61 @@ jobs:
           echo "current_branch=$CURRENT_BRANCH" >> $GITHUB_OUTPUT
           
           echo "📍 Current commit: $COMMIT_SHORT on branch $CURRENT_BRANCH"
-          
-      - name: Create git tag
-        if: github.event.inputs.dry_run != 'true'
+
+      # TEST MODE - Simulate commit info for PR testing
+      - name: TEST MODE - Simulate commit info
+        if: github.event_name == 'pull_request'
+        id: commit_info_test
         run: |
-          echo "🏷️ Creating git tag..."
+          COMMIT_HASH=$(git rev-parse HEAD)
+          COMMIT_SHORT=$(git rev-parse --short HEAD)
+          CURRENT_BRANCH="${{ github.head_ref }}"
           
+          echo "commit_hash=$COMMIT_HASH" >> $GITHUB_OUTPUT
+          echo "commit_short=$COMMIT_SHORT" >> $GITHUB_OUTPUT
+          echo "current_branch=$CURRENT_BRANCH" >> $GITHUB_OUTPUT
+          
+          echo "📍 TEST MODE - Current commit: $COMMIT_SHORT on branch $CURRENT_BRANCH"
+          
+      # - name: Create git tag
+      #   if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request'
+      #   run: |
+      #     echo "🏷️ Creating git tag..."
+      #     
+      #     TAG_NAME="${{ steps.next_version.outputs.package_name }}-${{ steps.next_version.outputs.next_version }}"
+      #     COMMIT_HASH="${{ steps.commit_info.outputs.commit_hash }}"
+      #     BRANCH_NAME="${{ steps.commit_info.outputs.current_branch }}"
+      #     
+      #     git config user.name "github-actions[bot]"
+      #     git config user.email "github-actions[bot]@users.noreply.github.com"
+      #     
+      #     # Create annotated tag with branch and commit info
+      #     git tag -a "$TAG_NAME" -m "Release ${{ steps.next_version.outputs.package_name }}@${{ steps.next_version.outputs.next_version }}" \
+      #            -m "" \
+      #            -m "Branch: $BRANCH_NAME" \
+      #            -m "Commit: $COMMIT_HASH" \
+      #            -m "Published: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+      #     
+      #     git push origin "$TAG_NAME"
+      #     
+      #     echo "✅ Created and pushed tag: $TAG_NAME"
+      #     echo "📍 Tagged commit: ${{ steps.commit_info.outputs.commit_short }} on branch $BRANCH_NAME"
+
+      # TEST MODE - Simulate git tag creation for PR testing
+      - name: TEST MODE - Simulate git tag creation
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "🧪 TEST MODE - Simulating git tag creation..."
           TAG_NAME="${{ steps.next_version.outputs.package_name }}-${{ steps.next_version.outputs.next_version }}"
-          COMMIT_HASH="${{ steps.commit_info.outputs.commit_hash }}"
-          BRANCH_NAME="${{ steps.commit_info.outputs.current_branch }}"
+          COMMIT_HASH="${{ steps.commit_info_test.outputs.commit_hash || 'test-commit' }}"
+          BRANCH_NAME="${{ steps.commit_info_test.outputs.current_branch || github.head_ref }}"
           
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          
-          # Create annotated tag with branch and commit info
-          git tag -a "$TAG_NAME" -m "Release ${{ steps.next_version.outputs.package_name }}@${{ steps.next_version.outputs.next_version }}" \
-                 -m "" \
-                 -m "Branch: $BRANCH_NAME" \
-                 -m "Commit: $COMMIT_HASH" \
-                 -m "Published: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-          
-          git push origin "$TAG_NAME"
-          
-          echo "✅ Created and pushed tag: $TAG_NAME"
-          echo "📍 Tagged commit: ${{ steps.commit_info.outputs.commit_short }} on branch $BRANCH_NAME"
+          echo "🏷️ Would create git tag: $TAG_NAME"
+          echo "📍 Would tag commit: ${{ steps.commit_info_test.outputs.commit_short || 'test-short' }} on branch $BRANCH_NAME"
+          echo "✅ Git tag simulation completed"
           
       - name: Restore all changes (NO COMMIT)
-        if: github.event.inputs.dry_run != 'true' && always()
+        if: github.event.inputs.dry_run != 'true' && github.event_name != 'pull_request' && always()
         run: |
           echo "🔄 Restoring all changes (files are not committed)..."
           
@@ -462,36 +532,19 @@ jobs:
         if: always()
         run: |
           echo ""
-          if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-            echo "🧪 DRY RUN COMPLETED"
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "🧪 PR TEST MODE COMPLETED"
             echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-            echo "✨ This was a dry run - no changes were made"
+            echo "✨ This was a PR test run - no actual changes were made"
             echo ""
-            echo "📋 Would have executed:"
-            echo "   🌿 Branch: ${{ github.event.inputs.branch }}"
+            echo "📋 Pipeline validation results:"
+            echo "   🌿 Branch: ${{ github.head_ref }}"
             echo "   📦 Package: ${{ steps.next_version.outputs.package_name }}"
             echo "   🆕 Version: ${{ steps.next_version.outputs.next_version }}"
             echo "   🏷️ Git Tag: ${{ steps.next_version.outputs.package_name }}-${{ steps.next_version.outputs.next_version }}"
-            if [ "${{ github.event.inputs.package_type }}" = "internal" ]; then
-              echo "   🔄 Route changes: catalyst-core → catalyst-core-internal"
-            else
-              echo "   🔄 Route changes: catalyst-core-internal → catalyst-core"
-            fi
+            echo "   🔄 Route changes: Simulated successfully"
+            echo "   🔨 Build: Simulated successfully"
+            echo "   📤 Publish: Simulated successfully"
             echo ""
-            echo "To actually publish, run this workflow again with 'Dry run' set to false."
-          else
-            echo "🎉 PUBLISH COMPLETED SUCCESSFULLY!"
-            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-            echo "✅ Published: ${{ steps.next_version.outputs.package_name }}@${{ steps.next_version.outputs.next_version }}"
-            echo "🌿 From branch: ${{ github.event.inputs.branch }}"
-            if [ -n "${{ steps.commit_info.outputs.commit_short }}" ]; then
-              echo "📍 Commit: ${{ steps.commit_info.outputs.commit_short }}"
-            fi
-            echo "🏷️ Git tag: ${{ steps.next_version.outputs.package_name }}-${{ steps.next_version.outputs.next_version }}"
-            echo "🔗 NPM: https://www.npmjs.com/package/${{ steps.next_version.outputs.package_name }}"
-            echo "📊 Check versions: https://www.npmjs.com/package/${{ steps.next_version.outputs.package_name }}?activeTab=versions"
-            echo ""
-            echo "📁 Repository status: All files restored to original state"
-            echo "🔄 Route changes were applied only for publishing"
-          fi
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo "✅ Pipeline is ready for production use!"
+          elif [ "${{ github.event.inputs.dry_run }
